# coupon_api

./: README.md  build.sh  manage.py  pyproject.toml  requirements.txt  settings.py  vercel.json
coupon_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
coupons/: models.py  serializers.py  urls.py  views.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_code.py
