[tool.poetry]
name = "coupon-api"
version = "0.1.0"
description = ""
authors = ["dev-code0101 <dev.codeone@proton.me>"]
readme = "README.md"
packages = [{include = "coupon_api"}]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
djongo = "^1.3.6"
Django = "^4.1.10"
pymongo = "^3.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
