[tool.poetry]
name = "coupon-api"
version = "0.1.0"
description = ""
authors = ["dev-code0101 <dev.codeone@proton.me>"]
readme = "README.md"
packages = [{include = "coupon_api"}]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "3.7.1"
asgiref = "3.7.2"
certifi = "2023.5.7"
dataclasses = "0.6"
django = "4.1.10"
django-cors-headers = "4.2.0"
django-environ = "0.10.0"
djangorestframework = "3.14.0"
djongo = "1.3.6"
dnspython = "2.4.0"
gunicorn = "21.2.0"
h11 = "0.14.0"
httpcore = "0.17.3"
idna = "3.4"
packaging = "23.1"
pymongo = "3.12.3"
pytz = "2023.3"
sniffio = "1.3.0"
sqlparse = "0.2.4"
tzdata = "2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
